--- a/public/styles.css
+++ b/public/styles.css
@@ -141,3 +141,26 @@ footer p {
 footer .container {
     padding: 5% 0 3%;
 }
+
+/* SubNav */
+.logo {
+    width: 45px;
+}
+
+.project-list {
+    color: black;
+}
+
+/* project page */
+.proj img {
+    display: block;
+    margin: 0 auto 0 auto;
+}
+
+.projectImg {
+    width: 70%;    
+}
+
+.img2 {
+    width: 80%;
+}
