--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ h3 {
 /* Containers */
 .container {
     margin: 0 3rem;
-    padding: 7% 30% 8%;
+    padding: 7% 20% 8%;
     width: 80%;
 }
 
@@ -152,15 +152,23 @@ footer .container {
 }
 
 /* project page */
-.proj img {
+.subnavlink{
+    color: white;
+}
+
+.projects img {
     display: block;
-    margin: 0 auto 0 auto;
+    margin: 0 auto 10px;
 }
 
 .projectImg {
-    width: 70%;    
+    width: 50%;
 }
 
 .img2 {
-    width: 80%;
+    width: 60%;
+}
+
+.projects p {
+    margin-bottom: 10px;
 }
